--- a/web/src/main/resources/assets/index.html
+++ b/web/src/main/resources/assets/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div id="projectinfo">
                     <h4>Cambridge Grand Junction Pathway</h4>
-                    <p>800 2- Cambridge vision scenario</p>
+                    <p>800 3- Regional proposed scenario</p>
                 </div>
 
                 <div id="options">
